implementacion eliminar registro de historial
